# surgery-viewer

./: .clang-format  .clang-tidy  .gitignore  .qglviewer.xml  .travis.yml  CMakeLists.txt  CMakeSettings.json  README.md
CGAL-5.0.1/examples/Triangulation_2/CGAL_Qt5_moc_and_resources_autogen/: moc_predefs.h  mocs_compilation.cpp
CGAL-5.0.1/examples/Triangulation_2/CGAL_Qt5_moc_and_resources_autogen/GY5BFDMENF/: moc_DemosMainWindow.cpp  moc_GraphicsItem.cpp  moc_GraphicsViewInput.cpp  moc_GraphicsViewNavigation.cpp  moc_camera.cpp  moc_frame.cpp  moc_image_interface.cpp  moc_keyFrameInterpolator.cpp  moc_manipulatedCameraFrame.cpp  moc_manipulatedFrame.cpp  moc_qglviewer.cpp
cmake/: AdressSanitizers.cmake  BuildSettings.cmake  ClangTidy.cmake  CompilerWarnings.cmake  Conan.cmake  ConfigureAssimp.cmake  ConfigureCGAL.cmake  ConfigureOpenGL.cmake  Coverage.cmake  Cppcheck.cmake  Doxygen.cmake  HeadersPrecompilation.cmake  PrecompiledHeaders.cmake  Sanitizers.cmake  conan.cmake  vcpkg.cmake
data/TEST/: grid_mini.ply  grid_triangulate_0.ply  grid_triangulate_curve_0.ply  grid_triangulate_wave_0.ply  test_1.ply  test_2_exterior_small.ply  test_2_interior.ply  test_2_interior_small.ply  test_band.ply
data/decoupe/: plan_01.mtl  plan_03.mtl
data/dissection/decoupe/: Plan_01_Textures.clean.reg.obj.mtl  Plan_02_Textures.clean.obj.mtl  Plan_03_Textures.clean.reg.obj.mtl  Plan_04_Textures.clean.reg.obj.mtl  log.txt  plan_02.mtl  plan_04.mtl
data/test/: plan_2.ply  plan_3.ply  plan_4.ply  test_2_exterior.ply  test_horn.ply
doc/: glxm.md
docs/: .~lock.rapport de stage Thibault ODORICO-2020.odt#  FATON_Camelia_rapportdestageACAE_2018-2019.docx  rapport de stage Thibault ODORICO-2020.odt
src/: CMakeLists.txt  cut.cpp  generation.cpp  geoconv.cpp  manip.cpp  match.cpp  model.fs  project.cpp  prop.cpp  properties.cpp  segmentation.cpp  test.cpp  view.cpp
src/instance/: Kernel.hpp  Surface_mesh.hpp  Surface_mesh_kd_tree.hpp
src/mesh/: conversion.cpp  conversion.hpp  conversion.inl  data.cpp  data.hpp  data.inl  draw.hpp  draw.inl  export.cpp  export.hpp  import.cpp  import.hpp  io.hpp  io.inl  marking.hpp  marking.inl  model.vs  projection.hpp  projection.inl  qglmesh.cpp  qglmesh.hpp  qglmesh.inl  utils.hpp  utils.inl  view.hpp  view.inl  viewer.cpp  viewer.hpp  viewer.inl
src/pch/: CGAL.h  STD.h  cgal.h  std.h
src/shader/: fragment_color_and_texture.frag  fragment_color_and_texture.glsl  fragment_color_only.frag  fragment_color_only.glsl  fragment_texture_only.frag  fragment_texture_only.glsl  vertex.glsl  vertex.vert
